# ai-buildcamp-homeworks

./: .gitignore  README.md  rag.ipynb
homework-1/: README.md  convert_pdf2md.ipynb  get_books.ipynb  homework1.md  pyproject.toml
homework-2/: README.md  agent_setup.ipynb  agentic-tool-call-loop.ipynb  wiki_tools.ipynb
