[project]
name = "ai-buildcamp-homework-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "gitsource>=0.0.4",
    "jupyterlab>=4.5.6",
    "markitdown[pdf]>=0.1.5",
    "minsearch>=0.0.10",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
]
